exploration 모드 추가

--- a/kesla_msg/CMakeLists.txt
+++ b/kesla_msg/CMakeLists.txt
@@ -8,6 +8,11 @@ find_package(catkin REQUIRED COMPONENTS
 
 add_message_files(FILES KeslaMsg.msg)
 
+add_service_files(
+  FILES
+  DoneService.srv
+)
+
 generate_messages(DEPENDENCIES std_msgs)
 
 catkin_package(
