--- a/srv_test/package.xml
+++ b/srv_test/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>kesla_msg</name>
+  <name>srv_test</name>
   <version>0.0.0</version>
-  <description>The node_controller package</description>
+  <description>The srv_test package</description>
 
   <maintainer email="kwon@todo.todo">kwon</maintainer>
 
@@ -11,12 +11,15 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>message_generation</build_depend>
+  <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
 
+  <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
 
+  <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>message_runtime</exec_depend>
+
 
   <export>
 
