--- a/turtlebot3/turtlebot3_navigation/param/costmap_common_params_burger.yaml
+++ b/turtlebot3/turtlebot3_navigation/param/costmap_common_params_burger.yaml
@@ -4,7 +4,7 @@ raytrace_range: 3.5
 footprint: [[-0.001, -0.001], [-0.001, 0.001], [0.001, 0.001], [0.001, -0.001]]
 robot_radius: 0.001
 
-inflation_radius: 0.08 #0.05
+inflation_radius: 0.10 #0.08 #0.05
 cost_scaling_factor: 0.1 #0.5(낮은 해상도)
 
 map_type: costmap
