--- a/turtlebot3/turtlebot3_navigation/param/dwa_local_planner_params_burger.yaml
+++ b/turtlebot3/turtlebot3_navigation/param/dwa_local_planner_params_burger.yaml
@@ -32,9 +32,9 @@ DWAPlannerROS:
   controller_frequency: 5.0
 
 # Trajectory Scoring Parameters
-  path_distance_bias: 32.0 #0.8 #50.0 #32.0 #0.8
-  goal_distance_bias: 20.0 #0.6
-  occdist_scale: 0.02 #50.0 #0.02
+  path_distance_bias: 32.0#32.0 #0.8 #50.0 #32.0 #0.8
+  goal_distance_bias: 1.0 #20.0 #0.6
+  occdist_scale: 0.02 #0.02 #50.0 #0.02
   forward_point_distance: 0.01 #0.05 #0.325
   stop_time_buffer: 0.2
   scaling_speed: 0.25
